# JNI-application-demo

./: .gitignore  settings.gradle.kts
app/: Android.bp  build.gradle.kts
app/src/androidTest/java/com/droid/carjniapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/droid/carjniapplication/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/droid/carjniapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativemath/: Android.bp  build.gradle.kts
nativemath/src/androidTest/java/com/droid/nativelib/: ExampleInstrumentedTest.kt
nativemath/src/main/: AndroidManifest.xml
nativemath/src/main/cpp/: CMakeLists.txt  nativemath.cpp
nativemath/src/main/java/com/droid/nativelib/: NativeMathLib.kt
nativemath/src/test/java/com/droid/nativelib/: ExampleUnitTest.kt
